    the MathML reader now checks that a <math> element or the body
    of a <lambda> element use appropriate tags as detailed
    in the schema for the subset of MathML supported.
    
  - The MATLAB binding now correctly identifies the use of the csymbol
    delay and provides the information to the user in a similar fashion
    to csymbol time.

* Bug fixes:

    The code that checks for AssignmentCycles was failing to check
    for an assignment that refered to the subject of that assignment,
    e.g. an assignment rule with variable "c" and math "2 * c" was
    not returning an error.  This is now fixed.

  - Tracker issue #2129044
    The writeRootFunction in the mathML writer was failing to output a
    root function correctly when it had only one child i.e. the default 
    degree of 2 was being used.  Thanks to Ralph Gauges for spotting this.

  - Tracker issue #2157800
    When csymbol time was used in a functionDefinition it was not being
    correctly considered as a numeric value.

  - Tracker issue #2189194
    bzip2-compression could cause a crash problem. 
    Thanks to Florian Kamm for reporting this bug and providing a patch.

  - Tracker issue #2188734
    "&amp;" (a predefined entity reference of ampersand) in an attribute value 
    was wrongly converted to "&amp;#38;" when libXML used as an underlying XML
    parser. Thanks to Chen Li for reporting this bug.

  - Tracker issue #2146714
    syncAnnotation() functions in SBase, Model, and SpeciesReference class
    could internally delete an old annotation object (XMLNode*) in an SBase
    object. This could lead to an invalid pointer to an already deleted  
    annotation object when syncAnnotation() functions are internally invoked 
    from getAnnotation() function. Thanks to Ralph Gauges for reporting this.

  - The SBMLWriter::writeSBML() function could create a zip file in which 
    an SBML file is stored with its path name.
    Thanks to Florian Kamm for reporting this bug.
