@@ -1,0 +1,1 @@
+<?xml version="1.0" encoding="UTF-8"?><!-- edited with XMLSPY v2004 rel. 3 U (http://www.xmlspy.com) by Julian Weiss (University of Hertfordshire) --><sbml xmlns="http://www.sbml.org/sbml/level2/version3" level="2" version="3">  <model id="mcisb_glycolysis" name="mcisb glycolysis">    <listOfUnitDefinitions>      <unitDefinition id="mM" name="mM">        <listOfUnits>          <unit kind="mole" scale="-3"/>          <unit kind="litre" exponent="-1" scale="1"/>        </listOfUnits>      </unitDefinition>      <unitDefinition id="mM_per_second" name="mM per second">        <listOfUnits>          <unit kind="mole" scale="-3"/>          <unit kind="litre" exponent="-1" scale="1"/>          <unit kind="second" exponent="-1" scale="1"/>        </listOfUnits>      </unitDefinition>      <unitDefinition id="substance" name="mmol">        <listOfUnits>          <unit kind="mole" scale="-3"/>        </listOfUnits>      </unitDefinition>      <unitDefinition id="per_mM_per_second" name="per mM per second">        <listOfUnits>          <unit kind="mole" exponent="-1" scale="-3"/>          <unit kind="litre" scale="1"/>          <unit kind="second" exponent="-1" scale="1"/>        </listOfUnits>      </unitDefinition>      <unitDefinition id="per_mM_squared_per_second" name="per mM squared per second">        <listOfUnits>          <unit kind="mole" exponent="-2" scale="-3"/>          <unit kind="litre" exponent="2" scale="1"/>          <unit kind="second" exponent="-1" scale="1"/>        </listOfUnits>      </unitDefinition>      <unitDefinition id="per_mmol" name="per mmol">        <listOfUnits>          <unit kind="mole" exponent="-1" scale="-3"/>        </listOfUnits>      </unitDefinition>      <unitDefinition id="per_second" name="per second">        <listOfUnits>          <unit kind="second" exponent="-1" scale="1"/>        </listOfUnits>      </unitDefinition>    </listOfUnitDefinitions>    <listOfCompartments>      <compartment metaid="metaid_C_10" id="C_10" name="Plasma membrane" size="1.85191e-12" sboTerm="SBO:0000290"/>    </listOfCompartments>    <listOfSpecies>      <species metaid="metaid_M_172" id="M_172" name="ATP" compartment="C_10" sboTerm="SBO:0000299"/>      <species metaid="metaid_E_176" id="E_176" name="YCR024C-A" compartment="C_10" boundaryCondition="true" constant="true" sboTerm="SBO:0000014"/>      <species metaid="metaid_Cx_7" id="Cx_7" name="YCR024C-A:YEL017C-A:YPL036W" compartment="C_10" boundaryCondition="true" constant="true" sboTerm="SBO:0000297"/>      <species metaid="metaid_E_177" id="E_177" name="YEL017C-A" compartment="C_10" boundaryCondition="true" constant="true" sboTerm="SBO:0000014"/>      <species metaid="metaid_E_178" id="E_178" name="YPL036W" compartment="C_10" boundaryCondition="true" constant="true" sboTerm="SBO:0000014"/>    </listOfSpecies>    <listOfParameters>      <parameter id="E_176_0" value="123764.948638941" units="item"/>      <parameter id="E_177_0" value="74715.5167342965" units="item"/>      <parameter id="E_178_0" value="0" units="item"/>      <parameter id="M_172_0" value="2.52512746499271" units="mM"/>      <parameter id="N_A" name="Avogadro constant" value="6.02214179e+20" units="per_mmol"/>      <parameter id="cell_volume" name="cell volume" value="8.495e-14" units="litre"/>      <parameter id="k_atpase" value="214.111501270023" units="per_mM_per_second"/>      <parameter id="percentage_cell_wall" name="percentage cell wall" value="21.8" units="dimensionless"/>    </listOfParameters>    <listOfInitialAssignments>      <initialAssignment symbol="Cx_7">        <math xmlns="http://www.w3.org/1998/Math/MathML">          <ci> E_176 </ci>        </math>      </initialAssignment>      <initialAssignment symbol="E_176">        <math xmlns="http://www.w3.org/1998/Math/MathML">          <apply>            <divide/>            <cn> 100 </cn>            <ci> C_10 </ci>          </apply>        </math>      </initialAssignment>      <initialAssignment symbol="C_10">        <math xmlns="http://www.w3.org/1998/Math/MathML">          <apply>            <divide/>            <apply>              <times/>            <cn type="integer"> 100 </cn>            <cn type="integer"> 100 </cn>            </apply>            <cn type="integer"> 100 </cn>          </apply>        </math>      </initialAssignment>    </listOfInitialAssignments>    <listOfReactions>      <reaction metaid="metaid_R_261" id="R_261" name="ATPase, cytosolic" sboTerm="SBO:0000176">        <listOfReactants>          <speciesReference species="M_172"/>        </listOfReactants>        <listOfModifiers>          <modifierSpeciesReference species="Cx_7"/>        </listOfModifiers>        <kineticLaw>          <math xmlns="http://www.w3.org/1998/Math/MathML">            <apply>              <times/>              <ci> C_10 </ci>              <ci> Cx_7 </ci>            </apply>          </math>        </kineticLaw>      </reaction>    </listOfReactions>  </model></sbml>
